src/styles/_skills.scss
@use './mixins' as m;
@use './variables' as v;

.skills-wrapper {
    width:100%;
    transform: translateY(270px);
    position:relative;
  
    @media screen and (max-width:v.$smallScreen) {
      transform: translateY(50px);
    }
  }
  
  .skills-wrapper .heading-box {
    width:95%;
    margin:0 auto;
    padding-bottom:60px;
    @include m.flex-box(center,row);

    @media screen and (max-width:v.$smallScreen) {
      padding-bottom:30px;
    }

  
    .heading {
      @include m.heading;
      left:-21%;
  
      @media screen and (max-width:v.$smallScreen) {
        font-size:3rem;
        left:-19%;
      }

      @media screen and (max-width:320px) {
        font-size:2.5rem;
        left:-20%;
      }

    @media screen and (min-width:768px) and (max-width:1024px) {
      font-size:7rem;
      left:-25%;
    }


    @media screen and (min-width:1024px) and (max-width:1030px) {
      left:-19%;
    }
  
      span {
        @include m.spacing;
        left:60.5%;//overrides left in spacing mixin

        @media screen and (max-width:v.$smallScreen) {
          left:48%;
        }
      }
  
    }
  }

  .skills-container {
    max-width:600px;
    height:100%;
    margin:0 auto;
    position:relative;
    border:2px solid transparent;
    
    @media screen and (max-width:v.$smallScreen) {
      padding:10px 0;
    }
  }
  
  .skills-wrapper .skills-container .skills {
    width:400px;
    height:400px;
    margin:90px auto;
    position:relative;
    border-radius:50%;
    background: rgba( 245, 246, 250, 0.25 );
    box-shadow: 0 2px 8px 0 rgba( 31, 38, 135, 0.20 );
    backdrop-filter: blur( 14px );
    -webkit-backdrop-filter: blur( 4.5px );
    background-image: url(../images/img-five.png);
    background-repeat: no-repeat;
    background-size: 60%;
    background-position: center;
  
    @media screen and (max-width:v.$smallScreen) {
      width:255px;
      height:255px;
      margin:30px auto;
    }

    @media screen and (max-width:320px) {
      width:252px;
      height:250px;
    }
  
  }
  
  .skills span {
    position:absolute;
    font-size:3rem;
    z-index:400;
  
    @media screen and (max-width:v.$smallScreen) {
      font-size:1.8rem;
    }
  }
  
  .skills span:nth-child(1) {
    top:-7%;
    left:38%;
    color:#EE5A24;
  
    @media screen and (max-width:v.$smallScreen) {
      top:-7%;
    }
  }
  
  .skills span:nth-child(2) {
    top:-7.5%;
    left:52%;
    color:#00a8ff;
  
    @media screen and (max-width:v.$smallScreen) {
      left:52%;
      top:-7%;
    }
  }
  
  .skills span:nth-child(3) {
    top:40%;
    right:-6%;
    color:#00a8ff;
  
    @media screen and (max-width:v.$smallScreen) {
      right:-5.8%;
    }
  }
  
  .skills span:nth-child(4) {
    bottom:-8%;
    left:45%;
    color:#fed330;
  
    @media screen and (max-width:v.$smallScreen) {
      bottom:-8%;
    }
  }
  
  .skills span:nth-child(5) {
    top:40%;
    left:-7.5%;
    color:#ff6b81;

    @media screen and (max-width:v.$smallScreen) {
      left:-7%;
    }
  }

  .skills-container .stack {
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
  }

  .skills-container p {
    color:#000000;
    font-size:2rem;
    position:absolute;
    z-index:-500;
    opacity:.3;
    -webkit-text-stroke-width:1px;
    -webkit-text-fill-color:transparent;

    @media screen and (max-width:v.$smallScreen) {
      font-size:1.2rem;
    }
  }

  .skills-container p:nth-child(1) {
    top:0;
    left:35%;

    @media screen and (max-width:v.$smallScreen) {
      top:-2%;
      left:36%;
    }

    @media screen and (min-width:768px) and (max-width:v.$smallScreen) {
      left:41.5%;
    }
  }

  .skills-container p:nth-child(2) {
    top:20%;
    left:10%;
    transform: rotate(-56deg);

    @media screen and (max-width:v.$smallScreen) {
      left:4%;
    }

    @media screen and (max-width:320px) {
      left:-2%;
    }

    @media screen and (min-width:768px) and (max-width:v.$smallScreen) {
      left:23%;
    }
  }

  .skills-container p:nth-child(3) {
    top:20%;
    right:12%;
    transform: rotate(56deg);

    @media screen and (max-width:v.$smallScreen) {
      right:5.5%;
    }

    @media screen and (max-width:320px) {
      right:-2%;
    }

    @media screen and (min-width:768px) and (max-width:v.$smallScreen) {
      right:24%;
    }
  }

  .skills-container p:nth-child(4) {
    top:70%;
    left:12%;
    transform: rotate(-120deg);

    @media screen and (max-width:v.$smallScreen) {
      left:5.5%;
    }

    @media screen and (max-width:320px) {
      left:-2%;
    }

    @media screen and (min-width:768px) and (max-width:v.$smallScreen) {
      left:24%;
    }
  }

  .skills-container p:nth-child(5) {
    top:70%;
    right:10%;
    transform: rotate(120deg);

    @media screen and (max-width:v.$smallScreen) {
      right:4%;
    }

    @media screen and (max-width:320px) {
      right:-2%;
    }

    @media screen and (min-width:768px) and (max-width:v.$smallScreen) {
      right:23%;
    }
  }

  .skills-container p:nth-child(6) {
    bottom:0;
    left:35%;

    @media screen and (max-width:v.$smallScreen) {
      bottom:-5%;
      left:37%;
    }

    @media screen and (min-width:768px) and (max-width:v.$smallScreen) {
      left:42.5%;
    }
  }
  

